--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev:backend": "cd backend && node server.js",
+    "dev:backend": "cd backend && nodemon --watch . --watch .. server.js",
     "dev:frontend": "vite",
     "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "build:all": "npm run build && cd backend && npm install --omit=dev",
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^6.0.3",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
+    "nodemon": "^3.1.11",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vue": "^3.5.26"
