--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "cd backend && set NODE_ENV=production& node server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
