--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -25,5 +26,9 @@
     "mysql2": "^3.16.0",
     "node-cron": "^4.2.1",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
