--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
+    "express-validator": "^7.3.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^170.1.0",
     "http-errors": "~1.6.3",
