--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "express-validator": "^7.3.1",
@@ -24,9 +24,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.16.0",
+    "mysql2": "^3.11.5",
     "node-cron": "^4.2.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^3.0.1"
   },
   "devDependencies": {
     "jest": "^30.2.0",
