--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "test:frontend": "vitest",
     "test:backend": "cd backend && npm test",
     "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "install:all": "npm install && cd backend && npm install",
+    "postinstall": "cd backend && npm install",
     "build:all": "npm run build && cd backend && npm install --omit=dev",
-    "start": "cd backend && set NODE_ENV=production& node server.js"
+    "start": "cd backend && set NODE_ENV=production& node server.js",
+    "db:sync": "node backend/scripts/sync-db-schema.js"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -30,11 +33,11 @@
     "@vue/test-utils": "^2.4.6",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
-    "happy-dom": "^20.3.4",
+    "happy-dom": "^20.3.7",
     "nodemon": "^3.1.11",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.18",
-    "vue": "^3.5.26"
+    "vue": "^3.5.27"
   }
 }
