--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
-    "express": "~4.16.1",
+    "express": "^4.22.1",
     "express-validator": "^7.3.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^170.1.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "node-cron": "^4.2.1",
